# agent-ochestration-sk-autogen

./: .env.sample  README.md  pyproject.toml
autogen/: ag_concurrent.py  ag_groupchat.py  ag_handoff.py  ag_sequential.py
semantic_kernel/: sk_concurrent.py  sk_groupchat.py  sk_handoff.py  sk_magnetic.py  sk_sequential.py
supplement/: LlamaIndex_agentic_workflows_Deep_Research_code_along.ipynb
